[tool.poetry]
name = "foocat_mds_13"
version = "0.1.0"
description = "test package made as class activity"
authors = ["Sukriti <sukriti1394@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
